8195804: Remove unused qualified export of sun.net.www from java.base to javafx.web
Reviewed-by: kcr, rkamath, ghb